# musicup

./: .gitignore  Cargo.toml  README.md  SConstruct  flake.nix  rust-toolchain.toml
.github/workflows/: nix-checker.yml
docs/: README.md
src/: SCsub  archive.rs  database.rs  lib.rs  main.c  main.rs  webserver.rs
src/database/: archive.rs
