[package]
name = "musicup"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
clap = { version = "4.5.41", features = ["derive", "string"] }
confy = "1.0.0"
serde = { version = "1.0.219", features = ["derive"] }
surrealdb = { version = "2.3.7", features = ["kv-mem"] }
tokio = { version = "1.45.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
