[package]
name = "musicup"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
chrono = "0.4.41"
clap = { version = "4.5.41", features = ["derive", "string"] }
confy = "1.0.0"
directories = "6.0.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
zip = "4.3.0"
